# my-task-manager

./: CLAUDE.md  README.md  install_reminder_app.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  claude.yml
contract/: recurrence_cases.json
reminder/: __init__.py  __main__.py  app.py  cli.py  config.py  notifications.py  recurrence.py  stats.py  task.py  theme.py  time_utils.py  timeline.py
tests/: test_config.py  test_notifications.py  test_planner.py  test_recurrence.py  test_recurrence_contract.py  test_stats.py  test_task.py  test_theme.py  test_time_utils.py  test_timeline.py
