[project]
name = "reminder"
version = "0.2.0"
description = "Any Planner 風タスクプランナー GUI アプリ（tkinter）。完了時点からの繰り返し（日/週/月/年）対応"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cairosvg>=2.7.0",
]

[project.scripts]
reminder = "reminder:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

