[project]
name = "my-task-manager"
version = "0.2.0"
description = "タイムライン型タスクプランナー GUI アプリ（tkinter）。Any Planner を参考に、完了時点からの繰り返し（日/週/月/年）に対応"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cairosvg>=2.7.0",
]

[project.scripts]
reminder = "reminder:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

