[project]
name = "my-task-manager"
version = "0.2.0"
description = "1日のタスクをカレンダー（デイビュー）で可視化し、空き時間と「あとでやる」を扱うデスクトップ・タスクプランナー（Python + tkinter）。Any Planner を参考に、完了時点を起点とした繰り返し（日/週/月/年）に対応"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["task-manager", "planner", "timeline", "calendar", "gui", "tkinter", "desktop", "recurrence"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Japanese",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Desktop Environment",
]
dependencies = []

[project.optional-dependencies]
# ウィンドウアイコン（SVG→PNG 変換）専用のオプション依存。
# 未インストールでも reminder/notifications.py の _set_window_icon() が
# ImportError を捕捉してアイコン設定をスキップするだけで、アプリ本体は問題なく動作する。
icon = [
  "cairosvg>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/izumacha/my-task-manager"
Repository = "https://github.com/izumacha/my-task-manager"

[project.scripts]
reminder = "reminder:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# setuptools のフラットレイアウト自動検出は contract/ もトップレベルパッケージとみなして
# 「複数パッケージを検出した」とビルドを拒否する（contract はコードではなくテスト専用の
# データディレクトリで、実際に配布すべき Python パッケージは reminder/ のみ）。
# 明示的に列挙することで pip install -e . / pipx install が失敗する問題を解消する。
packages = ["reminder"]

[tool.setuptools.package-data]
# reminder/assets/reminder_icon.svg（ウィンドウアイコン用 SVG）を wheel/sdist に同梱する。
# これが無いと `pip install`/`pipx install` の通常インストール後に
# reminder/notifications.py::_set_window_icon() が参照するファイルが存在せず、
# cairosvg を入れてもアイコン設定が常に黙ってスキップされてしまう。
reminder = ["assets/*.svg"]

